<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnBackground">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:paddingBottom="10dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/logo_img"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_big"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/app_name"/>

        <TextView
            android:id="@+id/txt_binding_1"
            android:text="@string/show_dialog_binding_test_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="14sp"
            android:textColor="#797979" />
        <Button
            android:layout_centerHorizontal="true"
            android:id="@+id/progress_binding_1"
            style="@style/SweetAlert.Button.Blue"
            android:layout_margin="10dp"
            android:text="@string/btn_show_me"/>

        <TextView
            android:id="@+id/txt_binding_2"
            android:text="@string/show_dialog_binding_test_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="14sp"
            android:textColor="#797979" />
        <Button
            android:layout_centerHorizontal="true"
            android:id="@+id/progress_binding_2"
            style="@style/SweetAlert.Button.Blue"
            android:layout_margin="10dp"
            android:text="@string/btn_show_me"/>

        <TextView
            android:id="@+id/txt_0"
            android:text="@string/show_dialog_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="14sp"
            android:textColor="#797979" />
        <Button
            android:layout_centerHorizontal="true"
            android:id="@+id/progress_dialog"
            style="@style/SweetAlert.Button.Blue"
            android:layout_margin="10dp"
            android:text="@string/btn_show_me"/>

        <TextView
            android:id="@+id/txt_1"
            android:text="@string/show_dialog_basic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="14sp"
            android:textColor="#797979"/>
        <Button
            android:layout_centerHorizontal="true"
            android:id="@+id/basic_test"
            style="@style/SweetAlert.Button.Blue"
            android:layout_margin="10dp"
            android:text="@string/btn_show_me"/>

        <TextView
            android:text="@string/show_dialog_custom_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="14sp"
            android:textColor="#797979"/>
        <Button
            android:layout_centerHorizontal="true"
            android:id="@+id/custom_view"
            style="@style/SweetAlert.Button.Blue"
            android:layout_margin="10dp"
            android:text="@string/btn_show_me"/>

        <TextView
            android:id="@+id/txt_2"
            android:text="@string/show_dialog_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="14sp"
            android:layout_marginTop="15dp"
            android:textColor="#797979"/>
        <Button
            android:layout_centerHorizontal="true"
            android:id="@+id/under_text_test"
            style="@style/SweetAlert.Button.Blue"
            android:layout_margin="10dp"
            android:text="@string/btn_show_me"/>

        <TextView
            android:id="@+id/txt_3"
            android:text="@string/show_dialog_error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="14sp"
            android:layout_marginTop="15dp"
            android:textColor="#797979"/>
        <Button
            android:layout_centerHorizontal="true"
            android:id="@+id/error_text_test"
            style="@style/SweetAlert.Button.Blue"
            android:layout_margin="10dp"
            android:text="@string/btn_show_me"/>

        <TextView
            android:id="@+id/txt_4"
            android:text="@string/show_dialog_success_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="14sp"
            android:layout_marginTop="15dp"
            android:textColor="#797979"/>
        <Button
            android:layout_centerHorizontal="true"
            android:id="@+id/success_text_test"
            style="@style/SweetAlert.Button.Blue"
            android:layout_margin="10dp"
            android:text="@string/btn_show_me"/>


        <TextView
            android:id="@+id/txt_5"
            android:text="@string/show_dialog_warning_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="14sp"
            android:layout_marginTop="15dp"
            android:textColor="#797979"/>
        <Button
            android:layout_centerHorizontal="true"
            android:id="@+id/warning_confirm_test"
            style="@style/SweetAlert.Button.Blue"
            android:layout_margin="10dp"
            android:text="@string/btn_show_me"/>

        <TextView
            android:id="@+id/txt_6"
            android:text="@string/show_dialog_warning_cancel_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="14sp"
            android:layout_marginTop="15dp"
            android:textColor="#797979"/>
        <Button
            android:layout_centerHorizontal="true"
            android:id="@+id/warning_cancel_test"
            style="@style/SweetAlert.Button.Blue"
            android:layout_margin="10dp"
            android:text="@string/btn_show_me"/>

        <TextView
            android:id="@+id/txt_7"
            android:text="@string/show_dialog_message_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="14sp"
            android:layout_marginTop="15dp"
            android:textColor="#797979"/>
        <Button
            android:layout_centerHorizontal="true"
            android:id="@+id/custom_img_test"
            style="@style/SweetAlert.Button.Blue"
            android:layout_margin="10dp"
            android:text="@string/btn_show_me"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>